# self-supervised-actions

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: build_pipeline_svg.py  pipeline-and-losses.md
docs/plans/: 2026-06-29-scaffold-toy-experiment.md  2026-06-30-observability-instrumentation.md  2026-06-30-position-invariant-encoder.md
docs/specs/: 2026-06-29-self-supervised-action-discovery-scaffold-design.md  2026-06-30-observability-and-bench-env-design.md  2026-06-30-position-invariant-action-inference-design.md
experiments/0_synthetic_toy/: README.md  env.py  eval.py  test_env.py  train.py
experiments/0_synthetic_toy/config/: config.yaml
experiments/0_synthetic_toy/results/: RESULTS.md
experiments/0_synthetic_toy/subexperiments/: RESULTS.md
ideas/: initial_ideation.md
research/: README.md  position-invariant-action-discovery-review.md
src/ssa/data/: batch.py
src/ssa/eval/: clustering.py  counterfactual.py  decoder_probe.py  figures.py  metrics.py
src/ssa/losses/: all_action_prediction.py  alpha_sparsity.py  base.py  counterfactual.py  coverage.py  decorrelation.py  margin.py  (+8 more)
tests/: test_batch.py  test_bundle_losses.py  test_counterfactual_loss.py  test_coverage.py  test_decoder_probe.py  test_dynamics.py  test_encoder.py  test_eval.py  test_figures.py  test_forward_selection.py  test_heads.py  test_invariant_inverse.py  test_inverse.py  test_logging.py  test_losses.py  test_metrics.py  test_model.py  test_projection.py  test_quantizer.py  test_seed.py  test_sinkhorn_coverage.py  test_smoke.py  test_trainer.py  test_vicreg.py
(+112 files in other folders)
