[project]
name = "ssa"
version = "0.1.0"
description = "Self-supervised action discovery"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5",
    "numpy>=1.26",
    "hydra-core>=1.3",
    "wandb>=0.17",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ssa"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests", "experiments"]
